fixup so it runs and uses current versions except google-services plugin
this works, but if you move google-services to 4.4.0 on rn71 stock template it breaks!